--- a/phone/samsung.css
+++ b/phone/samsung.css
@@ -59,7 +59,7 @@ body {
   position: relative;
   animation-play-state: running;
 }
-.phone:active {
+.phone:active, .phone:hover {
   animation-play-state: paused;
 }
 
@@ -93,7 +93,7 @@ body {
 }
 
 .phone__front {
-  background: red;
+  /*background: red;*/
   background: #2f2e33;
   border-radius: 2px;
   transform: translateZ(var(--width-padding));
@@ -104,7 +104,7 @@ body {
   --height-factor: 1.01;
   width: calc(var(--width) * var(--width-factor));
   height: calc(var(--height) * var(--height-factor));
-  background: darkred;
+  /*background: darkred;*/
   background: var(--white-color);
   border-radius: 5px;
   transform: translateZ(var(--width-negative-padding));
@@ -114,7 +114,7 @@ body {
 .phone__left {
   width: var(--depth);
   /*width: 18px;*/
-  background: blue;
+  /*background: blue;*/
   transform: rotateY(90deg) translateZ(var(--left-padding));
   display: none;
 }
@@ -122,7 +122,7 @@ body {
 .phone__right {
   width: var(--depth);
   /*width: 18px;*/
-  background: yellow;
+  /*background: yellow;*/
   transform: rotateY(-90deg) translateZ(var(--right-padding));
   display: none;
 }
@@ -160,7 +160,7 @@ body {
   border-top: solid 5px #ccc;
   border-bottom: solid 5px #ccc;
   border-radius: 100% 100% 100% 100% / 20% 20% 20% 20%;*/
-  background: rgb(0, 27, 144);
+  /*background: rgb(0, 27, 144);*/
   /*background: radial-gradient(
       circle at 220% 50%,
       rgba(0, 27, 144, 0) 0%,
